Chapter3 sub-titles are corrected.

--- a/camera_raw_chapter_3.ipynb
+++ b/camera_raw_chapter_3.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# 3 基本的な処理\n",
     "\n",
-    "## 3.1 準備と簡易デモザイク"
+    "## 3.1 準備"
    ]
   },
   {
@@ -153,7 +153,7 @@
     "id": "muiAt03rOJWn"
    },
    "source": [
-    "## RAW画像の読み込み"
+    "### RAW画像の読み込み"
    ]
   },
   {
