--- a/camera_raw_chapter_5_3.ipynb
+++ b/camera_raw_chapter_5_3.ipynb
@@ -249,7 +249,7 @@
         "\n",
         "$$\n",
         "\\left(\n",
-        "\\begin{array}{rr}\n",
+        "\\begin{array}{rrr}\n",
         "0.299 &0.587 &0.144 \\\\\\\n",
         "-0.168736 &-0.331264 &0.5 \\\\\\ \n",
         "0.5 &-0.418688 &-0.081312\\\\\\\n",
