URL is replaced with short URL.

--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -230,7 +230,7 @@
       "source": [
         "### 次の章\n",
         "\n",
-        "次は[カメラ画像処理について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_2.ipynb)簡単に解説します。"
+        "次は[カメラ画像処理について](http://bit.ly/raw_chap_2)簡単に解説します。"
       ]
     }
   ]
