--- a/camera_raw_chapter_4.ipynb
+++ b/camera_raw_chapter_4.ipynb
@@ -48,9 +48,9 @@
         "\n",
         "この章ではカメラ画像処理の中でも重要な処理を紹介します。\n",
         "\n",
-        "この章の内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+        "この章の内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
         "\n",
-        "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4.ipynb\n"
+        "http://bit.ly/raw_chap_4\n"
       ]
     },
     {
@@ -87,7 +87,7 @@
         "\n",
         "### まとめ\n",
         "\n",
-        "この章で扱う内容について概要を説明しました。次は[線形補間デモザイク処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_2.ipynb)です。"
+        "この章で扱う内容について概要を説明しました。次は[線形補間デモザイク処理](http://bit.ly/raw_chap_4_2)です。"
       ]
     }
   ]
