URL is shortened.

--- a/camera_raw_chapter_4_2.ipynb
+++ b/camera_raw_chapter_4_2.ipynb
@@ -35,9 +35,9 @@
         "\n",
         "この節では、画像サイズを変えないデモザイク処理を解説します。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
         "\n",
-        "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_2.ipynb"
+        "http://bit.ly/raw_chap_4_2"
       ]
     },
     {
@@ -57,8 +57,8 @@
       "metadata": {
         "id": "R7s9rbZkqO3n",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "fd06a07a-82bb-4ce8-c0b2-2fce68b3ff9f"
+        "outputId": "fd06a07a-82bb-4ce8-c0b2-2fce68b3ff9f",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -198,8 +198,8 @@
       "metadata": {
         "id": "5ya9tI1RqO3y",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "d9063031-e230-4bb5-f9b7-15f3cf85e377"
+        "outputId": "d9063031-e230-4bb5-f9b7-15f3cf85e377",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -241,8 +241,8 @@
       "metadata": {
         "id": "-lJ1rdM5qO32",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3351f51c-86ec-462d-f028-4af928b6a26b"
+        "outputId": "3351f51c-86ec-462d-f028-4af928b6a26b",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -334,8 +334,8 @@
       "metadata": {
         "id": "u0pRBSkDqO4C",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "059faf57-c5f4-43b4-ce2b-b08894943936"
+        "outputId": "059faf57-c5f4-43b4-ce2b-b08894943936",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -378,8 +378,8 @@
       "metadata": {
         "id": "ttYXCFXHqO4G",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "33dcda45-a42a-489b-80ad-c724b940c56a"
+        "outputId": "33dcda45-a42a-489b-80ad-c724b940c56a",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -523,8 +523,8 @@
       "metadata": {
         "id": "OW_B9ga2qO4O",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "65a9c711-a851-4eac-a83c-968ec10e310a"
+        "outputId": "65a9c711-a851-4eac-a83c-968ec10e310a",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -581,8 +581,8 @@
       "metadata": {
         "id": "Ah36MmFlqO4V",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "6a9c03b7-e88c-4530-de0d-4eabed2e0fdf"
+        "outputId": "6a9c03b7-e88c-4530-de0d-4eabed2e0fdf",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -624,8 +624,8 @@
       "metadata": {
         "id": "sei5tVpoqO4Y",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "e11cd4b7-ed2e-409e-fcd1-53b7b327d5bb"
+        "outputId": "e11cd4b7-ed2e-409e-fcd1-53b7b327d5bb",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -821,7 +821,7 @@
       "source": [
         "### まとめ\n",
         "\n",
-        "この節では線形補間によるデモザイク処理を行いました。次は[欠陥画素補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_3.ipynb)を行います。"
+        "この節では線形補間によるデモザイク処理を行いました。次は[欠陥画素補正](http://bit.ly/raw_chap_4_3)を行います。"
       ]
     }
   ]
