URL is shortened.

--- a/camera_raw_chapter_5_3.ipynb
+++ b/camera_raw_chapter_5_3.ipynb
@@ -35,9 +35,9 @@
         "\n",
         "この節ではエッジ強調について解説します。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
         "\n",
-        "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_3.ipynb"
+        "http://bit.ly/raw_5_3"
       ]
     },
     {
@@ -57,11 +57,11 @@
       "metadata": {
         "id": "X1LI-kqOtqsz",
         "colab_type": "code",
+        "outputId": "a2756255-4eb2-4185-9cab-93eddf99ef9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 210
-        },
-        "outputId": "a2756255-4eb2-4185-9cab-93eddf99ef9c"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -99,7 +99,7 @@
         "raw_array = raw.raw_image\n",
         "h, w = raw_array.shape"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,11 +179,11 @@
       "metadata": {
         "id": "KQXY1OSMtqs5",
         "colab_type": "code",
+        "outputId": "af2b0c18-a9b6-4d95-f242-e74fea45d00c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
-        },
-        "outputId": "af2b0c18-a9b6-4d95-f242-e74fea45d00c"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -194,7 +194,7 @@
         "plt.title(u\"前回までの画像、拡大\")\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -296,11 +296,11 @@
       "metadata": {
         "id": "N87MXTAntqs_",
         "colab_type": "code",
+        "outputId": "04a39b70-05ef-4450-b432-08645d3498b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
-        },
-        "outputId": "04a39b70-05ef-4450-b432-08645d3498b1"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -311,7 +311,7 @@
         "plt.title('輝度信号')\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -370,11 +370,11 @@
       "metadata": {
         "id": "hKKs4lP1tqtE",
         "colab_type": "code",
+        "outputId": "686b6c93-fe19-4ee8-d30d-2416716890e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 468
-        },
-        "outputId": "686b6c93-fe19-4ee8-d30d-2416716890e7"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -389,7 +389,7 @@
         "plt.title('ガウンシアンフィルター処理後')\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -446,11 +446,11 @@
       "metadata": {
         "id": "TbmZUs2HtqtK",
         "colab_type": "code",
+        "outputId": "7c268395-a05a-4ed5-d300-e9740828273f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 469
-        },
-        "outputId": "7c268395-a05a-4ed5-d300-e9740828273f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -465,7 +465,7 @@
         "plt.title('アンシャープマスク後(輝度)')\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -530,11 +530,11 @@
       "metadata": {
         "id": "rzzbYocZtqtQ",
         "colab_type": "code",
+        "outputId": "c534cc29-9d45-4631-f833-bb7118a0b5b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 469
-        },
-        "outputId": "c534cc29-9d45-4631-f833-bb7118a0b5b9"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -549,7 +549,7 @@
         "plt.title('アンシャープマスク後（カラー）')\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -704,11 +704,11 @@
       "metadata": {
         "id": "gzo9J_yztqtb",
         "colab_type": "code",
+        "outputId": "3a2d02c5-46c3-49da-cd92-b59197d4ae99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 902
-        },
-        "outputId": "3a2d02c5-46c3-49da-cd92-b59197d4ae99"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -724,7 +724,7 @@
         "plt.title(u\"エッジ強調、拡大\")\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -762,7 +762,7 @@
         "今回は古典的なアンシャープマスキングによるエッジ強調を行いました。\n",
         "昔から知られている処理ですが、現代のエッジ強調アルゴリズムにも通じる部分の多い重要なアルゴリズムです。\n",
         "\n",
-        "次は[トーンカーブ補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_4.ipynb)をあつかいます。"
+        "次は[トーンカーブ補正](http://bit.ly/raw_5_4)をあつかいます。"
       ]
     }
   ]
