URL is shortened.

--- a/camera_raw_chapter_5_4.ipynb
+++ b/camera_raw_chapter_5_4.ipynb
@@ -657,7 +657,7 @@
         "今回はトーンカーブ補正を行いました。ここではトーンカーブを手動で設定しましたが、カメラの中では画像の内容や状況に応じて自動的に最適なトーンカーブを設定します。この本の範囲を超えるのであつかいませんが、こういったアルゴリズムもそれ自体かなり重要な処理です。\n",
         "またここで扱ったものは画像全体に一律のトーンカーブを使いますがこういったものはグローバル・トーンカーブ補正と呼ばれます。さらに高度な処理では画像内の領域ごとにコントラストの調整を行ったりします。興味がある方は論文など参照されてはどうでしょうか？\n",
         "\n",
-        "これで画質を良くする処理の章は終わりです。次は[応用編](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_6_1.ipynb)に入ります。\n",
+        "これで画質を良くする処理の章は終わりです。次は[応用編](http://bit.ly/raw_6_1)に入ります。\n",
         "\n"
       ]
     },
