URL is shortened.

--- a/camera_raw_chapter_6_1.ipynb
+++ b/camera_raw_chapter_6_1.ipynb
@@ -59,9 +59,9 @@
         "\n",
         "この節では第４章で取り上げた線形補間デモザイクの特徴について調べて次の章の準備とします。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
         "\n",
-        "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_6_1.ipynb"
+        "http://bit.ly/raw_6_1"
       ]
     },
     {
@@ -80,8 +80,8 @@
       "metadata": {
         "id": "KN3U7Apizs8Y",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "75840f5b-91f6-4503-e9df-dd2a6de446a2"
+        "outputId": "75840f5b-91f6-4503-e9df-dd2a6de446a2",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -293,8 +293,8 @@
       "metadata": {
         "id": "NNehcSlMzs8f",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "b8a3baad-ceb2-4974-f757-449f03bb88bd"
+        "outputId": "b8a3baad-ceb2-4974-f757-449f03bb88bd",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -412,8 +412,8 @@
       "metadata": {
         "id": "fM1yDFvMzs8w",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a2917857-5dda-49cf-c437-8a88ef8c72e5"
+        "outputId": "a2917857-5dda-49cf-c437-8a88ef8c72e5",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -472,7 +472,7 @@
         "\n",
         "今回は線形補間デモザイクフィルターの周波数特性を調べてその問題点を調べてきました。\n",
         "\n",
-        "次はこういった問題点を改善した[高度なデモザイク処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_6_1.ipynb)に入ります。\n",
+        "次はこういった問題点を改善した[高度なデモザイク処理](http://bit.ly/raw_6_2)に入ります。\n",
         "\n"
       ]
     },
