URL is shortened.

--- a/camera_raw_chapter_6_2.ipynb
+++ b/camera_raw_chapter_6_2.ipynb
@@ -35,9 +35,9 @@
         "\n",
         "この節では線形補間デモザイクよりも高度なデモザイクアルゴリズムをとりあげます。なお、この節の内容の大部分は\"Frequency-Domain Methods for Demosaicking of Bayer-Sampled Color Images, Eric Dubois, IEEE Signal Processing Letters, Dec. 2005\"に基づいています。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
         "\n",
-        "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_6_1.ipynb"
+        "http://bit.ly/raw_6_2"
       ]
     },
     {
@@ -57,8 +57,8 @@
       "metadata": {
         "id": "aMSCtDQHypub",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "71883641-991f-4b19-c73e-b7dceaee5e29"
+        "outputId": "71883641-991f-4b19-c73e-b7dceaee5e29",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -667,8 +667,8 @@
       "metadata": {
         "id": "W6bbX44RypvN",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "655b4388-278f-46a7-be33-fb31d445584c"
+        "outputId": "655b4388-278f-46a7-be33-fb31d445584c",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -716,8 +716,8 @@
       "metadata": {
         "id": "YTdf0jvYypvR",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "10b1dcba-23ab-4142-b614-b21f882a943c"
+        "outputId": "10b1dcba-23ab-4142-b614-b21f882a943c",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -911,8 +911,8 @@
       "metadata": {
         "id": "fVnyrRNoypvZ",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "1fa252f7-e00a-45e5-ebf2-cc2c636447a9"
+        "outputId": "1fa252f7-e00a-45e5-ebf2-cc2c636447a9",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
