Chapter 7 and appendix place holders are added. Links are updated with short URL.

--- a/camera_raw_toc.ipynb
+++ b/camera_raw_toc.ipynb
@@ -15,64 +15,62 @@
     "\n",
     "## 目次\n",
     "\n",
-    "1. [はじめに](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_1.ipynb)\n",
+    "1. [はじめに](http://bit.ly/raw_chap_1)\n",
     "\n",
     "\n",
-    "2. [カメラ画像処理について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_2.ipynb)\n",
+    "2. [カメラ画像処理について](http://bit.ly/raw_chap_2)\n",
     "\n",
     "\n",
-    "3. [基本的な処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3.ipynb)\n",
+    "3. [基本的な処理](http://bit.ly/raw_chap_3)\n",
     "\n",
-    "  3.1 [準備](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3.ipynb#scrollTo=xamnD5Vtx0vL&line=5&uniqifier=1)\n",
+    "  3.1 [準備](http://bit.ly/raw_chap_3_1)\n",
     "\n",
-    "  3.2 [簡易デモザイク処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3.ipynb#scrollTo=4QCA4GP7QpFU)\n",
+    "  3.2 [簡易デモザイク処理](http://bit.ly/raw_chap_3_2)\n",
     "\n",
-    "  3.3 [ホワイトバランス調整](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3.ipynb#scrollTo=IZoaCYmxSm8a)\n",
+    "  3.3 [ホワイトバランス調整](http://bit.ly/raw_chap_3_3)\n",
     "\n",
-    "  3.4 [ブラックレベル調整](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3.ipynb#scrollTo=CI321RybT12c)\n",
+    "  3.4 [ブラックレベル調整](http://bit.ly/raw_chap_3_4)\n",
     "\n",
-    "  3.5 [ガンマ補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3.ipynb#scrollTo=tqGZesmEVCkP)\n",
+    "  3.5 [ガンマ補正](http://bit.ly/raw_chap_3_5)\n",
     "\n",
-    "4. [重要な処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4.ipynb)\n",
+    "4. [重要な処理](http://bit.ly/raw_chap_4)\n",
     "\n",
-    "  4.1 [この章について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4.ipynb)\n",
+    "  4.1 [この章について](http://bit.ly/raw_chap_4_1)\n",
     "\n",
-    "  4.2 [線形補間デモザイク](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_2.ipynb)\n",
+    "  4.2 [線形補間デモザイク](http://bit.ly/raw_chap_4_2)\n",
     "\n",
-    "  4.3 [欠陥画素補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_3.ipynb)\n",
+    "  4.3 [欠陥画素補正](http://bit.ly/raw_chap_4_3)\n",
     "\n",
-    "  4.4 [カラーマトリクス補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_4.ipynb)\n",
+    "  4.4 [カラーマトリクス補正](http://bit.ly/raw_chap_4_4)\n",
     "\n",
-    "  4.5 [レンズシェーディング補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_4_5.ipynb)\n",
+    "  4.5 [レンズシェーディング補正](http://bit.ly/raw_chap_4_5)\n",
     "  \n",
     "\n",
-    "5. [画質を良くする処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5.ipynb)\n",
+    "5. [画質を良くする処理](http://bit.ly/raw_chap_5)\n",
     "\n",
-    "  5.1 [この章について](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5.ipynb)\n",
+    "  5.1 [この章について](http://bit.ly/raw_chap_5_1)\n",
     "\n",
-    "  5.2 [ノイズフィルター](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_2.ipynb)\n",
+    "  5.2 [ノイズフィルター](http://bit.ly/raw_chap_5_2)\n",
     "\n",
-    "  5.3 [エッジ強調](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_3.ipynb)\n",
+    "  5.3 [エッジ強調](http://bit.ly/raw_chap_5_3)\n",
     "\n",
-    "  5.4 [トーンカーブ補正](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_5_4.ipynb)\n",
-    "\n",
-    "\n",
-    "6. [応用編](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_6_1.ipynb)\n",
-    "\n",
-    "  6.1 [線形補間デモザイクの周波数特性](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_6_1.ipynb)\n",
-    "\n",
-    "  6.2 [高度なデモザイク処理](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_6_2.ipynb)\n",
+    "  5.4 [トーンカーブ補正](http://bit.ly/raw_chap_5_4)\n",
     "\n",
     "\n",
-    "7. まとめ\n",
+    "6. [応用編](http://bit.ly/raw_chap_6_1)\n",
+    "\n",
+    "  6.1 [線形補間デモザイクの周波数特性](http://bit.ly/raw_chap_6_1)\n",
+    "\n",
+    "  6.2 [高度なデモザイク処理](http://bit.ly/raw_chap_6_2)\n",
     "\n",
     "\n",
-    "8. Appendix\n",
+    "7. [まとめ](http://bit.ly/raw_chap_6_2)\n",
     "\n",
-    "  8.1. Google Colabの使い方\n",
+    "8. [Appendix](http://bit.ly/raw_appendix)\n",
+    "\n",
+    "  8.1. [Google Colabの使い方](http://bit.ly/raw_appendix_1)\n",
     "  \n",
-    "  8.2. RAW画像の撮影方法\n",
-    "  "
+    "  8.2. [RAW画像の撮影方法](http://bit.ly/raw_appendix_1)  "
    ]
   }
  ],
