--- a/listings-setup.tex
+++ b/listings-setup.tex
@@ -3,7 +3,7 @@
 
 \lstset{
     basicstyle=\ttfamily,
-    numbers=none,
+    numbers=left,
     keywordstyle=\color[rgb]{0.13,0.29,0.53}\bfseries,
     stringstyle=\color[rgb]{0.31,0.60,0.02},
     commentstyle=\color[rgb]{0.56,0.35,0.01}\itshape,
