Appendix link fixed.

--- a/camera_raw_toc.ipynb
+++ b/camera_raw_toc.ipynb
@@ -64,9 +64,9 @@
     "  6.2 [高度なデモザイク処理](http://bit.ly/raw_chap_6_2)\n",
     "\n",
     "\n",
-    "7. [まとめ](http://bit.ly/raw_chap_6_2)\n",
+    "7. [まとめ](http://bit.ly/raw_chap_7)\n",
     "\n",
-    "8. [Appendix](http://bit.ly/raw_appendix)\n",
+    "8. [Appendix](http://bit.ly/raw_appendix_1)\n",
     "\n",
     "  8.1. [Google Colabの使い方](http://bit.ly/raw_appendix_1)\n",
     "  \n",
